--- a/package.json
+++ b/package.json
@@ -9,16 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@firebase/functions": "^0.8.3",
+    "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.8.6",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "firebase": "^9.8.4",
     "next": "12.2.0",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.4.0",
+    "react-player": "^2.10.1",
+    "recoil": "^0.7.4",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
+    "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^3.1.4",
+    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "4.7.4"
   }
 }
